libguile/r6rs-ports.c
@@ -225,7 +225,7 @@ custom_binary_port_seek (SCM port, scm_t_off offset, int whence)
 	  scm_wrong_type_arg_msg (FUNC_NAME, 0, port,
 				  "R6RS custom binary port with "
 				  "`port-position' support");
-	c_result = scm_to_int (result);
+	c_result = scm_to_off_t (result);
 	if (offset == 0)
 	  /* We just want to know the current position.  */
 	  break;
